--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: "Proxima Nova", sans-serif;
             text-decoration: none;
             text-align: center;
+			text-transform: uppercase;
         }
         a:hover {
             text-decoration: underline;
