add basic structure for holiday site

--- a/holiday/index.html
+++ b/holiday/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<title>Urlaub für Tobanika</title>
+	<meta name="robots" content="noindex">
+	<title>Rückmeldung Hochzeit Tobias &amp; Anika</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+	<link rel="stylesheet" href="assets/css/holiday.min.css">
+	<link rel="icon" type="image/png" href="assets/favicon.png" />
+	<script src="https://use.typekit.net/qtl2ghn.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
-	<h1>Urlaub für Tobanika</h1>
+	<main>
+		<section class="cards" id="chicago-activities">
+			<h1>Our Favorite Activities in and around Chicago</h1>
+		</section>
+		<hr>
+		<section class="cards" id="midwest-trips">
+			<h1>Midwest Trips</h1>
+		</section>
+	</main>
+	<footer>
+		<p>
+			Fragen? Schreib uns: <a href="mailto:us@tobanika.us">us@tobanika.us</a>
+		</p>
+	</footer>
+	<script src="chicago-activities.json"></script>
+	<script src="midwest-trips.json"></script>
+	<script src="assets/js/holiday.js" charset="utf-8"></script>
 </body>
 </html>
