first version of holiday page

--- a/holiday/index.html
+++ b/holiday/index.html
@@ -14,18 +14,18 @@
 <body>
 	<main>
 		<section class="cards" id="chicago-activities">
-			<h1>Our Favorite Activities in and around Chicago</h1>
+			<h1>Our Favorite Activities around Chicago</h1>
 		</section>
 		<hr>
 		<section class="cards" id="midwest-trips">
-			<h1>Midwest Trips</h1>
+			<h1>Inspiration for Midwest and Eastcoast Trips</h1>
 		</section>
 	</main>
-	<footer>
+	<!-- <footer>
 		<p>
 			Fragen? Schreib uns: <a href="mailto:us@tobanika.us">us@tobanika.us</a>
 		</p>
-	</footer>
+	</footer> -->
 	<script src="chicago-activities.json"></script>
 	<script src="midwest-trips.json"></script>
 	<script src="assets/js/holiday.js" charset="utf-8"></script>
