finished holiday page cards

--- a/holiday/index.html
+++ b/holiday/index.html
@@ -18,7 +18,7 @@
 		</section>
 		<hr>
 		<section class="cards" id="midwest-trips">
-			<h1>Inspiration for Midwest and Eastcoast Trips</h1>
+			<h1>Inspiration for Midwest and East Coast Trips</h1>
 		</section>
 	</main>
 	<!-- <footer>
