slight page speed optimation

--- a/holiday/index.html
+++ b/holiday/index.html
@@ -2,8 +2,7 @@
 <html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<meta name="robots" content="noindex">
-	<title>Rückmeldung Hochzeit Tobias &amp; Anika</title>
+	<title>Urlaub für Tobanika</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="assets/css/holiday.min.css">
@@ -28,6 +27,6 @@
 	</footer> -->
 	<script src="chicago-activities.json"></script>
 	<script src="midwest-trips.json"></script>
-	<script src="assets/js/holiday.js" charset="utf-8"></script>
+	<script src="assets/js/holiday.min.js" charset="utf-8"></script>
 </body>
 </html>
