add map experiment

--- a/holiday/index.html
+++ b/holiday/index.html
@@ -15,8 +15,9 @@
 		<section class="cards" id="chicago-activities">
 			<h1>Our Favorite Activities around Chicago</h1>
 		</section>
-		<hr>
 		<section class="cards" id="midwest-trips">
+			<iframe width='100%' height='600px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/mrloh.nkf33dh7/zoompan,zoomwheel.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
+
 			<h1>Inspiration for Midwest and East Coast Trips</h1>
 		</section>
 	</main>
