--- a/holiday/index.html
+++ b/holiday/index.html
@@ -16,7 +16,7 @@
 			<h1>Our Favorite Activities around Chicago</h1>
 		</section>
 		<section class="cards" id="midwest-trips">
-			<iframe class="map" frameBorder="0" src='https://a.tiles.mapbox.com/v4/mrloh.nkfek87e/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
+			<iframe class="map" frameBorder="0" src='https://a.tiles.mapbox.com/v4/mrloh.nkfek87e/attribution,zoompan,zoomwheel.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
 
 			<h1>Inspiration for Midwest and East Coast Trips</h1>
 		</section>
