--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <h1><a href="home/">Home</a></h1>
     <hr>
     <h3><a href="survey/">Survey</a></h3>
-    <h3><a href="holiday/">Holiday</a></h3>
+    <h3><a href="vacation/">Vacation</a></h3>
 </body>
 </html>
