--- a/vacation/index.html
+++ b/vacation/index.html
@@ -5,7 +5,7 @@
 	<title>Urlaub für Tobanika</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-	<link rel="stylesheet" href="assets/css/holiday.min.css">
+	<link rel="stylesheet" href="assets/css/vacation.min.css">
 	<link rel="icon" type="image/png" href="assets/favicon.png" />
 	<script src="https://use.typekit.net/qtl2ghn.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -28,6 +28,6 @@
 	</footer> -->
 	<script src="chicago-activities.json"></script>
 	<script src="midwest-trips.json"></script>
-	<script src="assets/js/holiday.min.js" charset="utf-8"></script>
+	<script src="assets/js/vacation.min.js" charset="utf-8"></script>
 </body>
 </html>
