change page title to english

--- a/vacation/index.html
+++ b/vacation/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<title>Urlaub für Tobanika</title>
+	<title>Vacation for Tobanika</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="assets/css/vacation.min.css">
