added second map for ch

--- a/vacation/index.html
+++ b/vacation/index.html
@@ -12,20 +12,18 @@
 </head>
 <body>
 	<main>
-		<section class="cards" id="chicago-activities">
+		<section class="cards">
 			<h1>Our Favorite Activities around Chicago</h1>
+			<div id="chicago-activities"></div>
+			<iframe class="map" frameBorder="0" src='https://a.tiles.mapbox.com/v4/mrloh.nkglep4k/zoompan.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
 		</section>
-		<section class="cards" id="midwest-trips">
-			<iframe class="map" frameBorder="0" src='https://a.tiles.mapbox.com/v4/mrloh.nkfek87e/attribution,zoompan,zoomwheel.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
 
+		<section class="cards">
 			<h1>Inspiration for Midwest and East Coast Trips</h1>
+			<div id="midwest-trips"></div>
+			<iframe class="map" frameBorder="0" src='https://a.tiles.mapbox.com/v4/mrloh.nkfek87e/zoompan.html?access_token=pk.eyJ1IjoibXJsb2giLCJhIjoibDFUSFFvcyJ9.mi-8FmeKqmdDCrBhZqGsmw'></iframe>
 		</section>
 	</main>
-	<!-- <footer>
-		<p>
-			Fragen? Schreib uns: <a href="mailto:us@tobanika.us">us@tobanika.us</a>
-		</p>
-	</footer> -->
 	<script src="chicago-activities.json"></script>
 	<script src="midwest-trips.json"></script>
 	<script src="assets/js/vacation.min.js" charset="utf-8"></script>
