add google anaytics

--- a/vacation/index.html
+++ b/vacation/index.html
@@ -11,6 +11,7 @@
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
+	<?php include_once("assets/lib/analyticstracking.php") ?>
 	<main>
 		<section class="cards">
 			<h1>Our Favorite Activities around Chicago</h1>
