--- a/index/index.html
+++ b/index/index.html
@@ -5,6 +5,6 @@
 	<title>Tobias &#x2764; Anika</title>
 </head>
 <body>
-
+	<?php include_once("assets/lib/analyticstracking.php") ?>
 </body>
 </html>
